# py_projects_DA

./: app.py  pyproject.toml
notebooks/dolarperu/: a.py  main.ipynb
projects/dolar_peru/: main.py
