[tool.poetry]
name = "py-projects-da"
version = "0.1.0"
description = ""
authors = ["tjhon <fr.jhonk@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
dollarperu = {git = "https://github.com/TJhon/dolar-peru.git"}
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

